--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -30,7 +30,7 @@ gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
-#Orozco, eres un pinche mamon
+# bootstrap sass
 gem 'bootstrap-sass',       '3.2.0.0'
 
 # Use ActiveModel has_secure_password
