--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -32,7 +32,6 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 # bootstrap sass
 gem 'bootstrap-sass',       '3.2.0.0'
-
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
@@ -41,6 +40,9 @@ gem 'bootstrap-sass',       '3.2.0.0'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+
+#Use carrierwave for the file upload
+gem 'carrierwave'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
