--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -34,6 +34,7 @@ gem 'jquery-rails'
 gem 'jquery-ui-rails'
 
 gem 'momentjs-rails', '>= 2.9.0'
+
 gem 'bootstrap3-datetimepicker-rails', '~> 4.14.30'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
@@ -56,6 +57,8 @@ gem 'bootstrap-sass',       '3.2.0.0'
 
 #Use carrierwave for the file upload
 gem 'carrierwave'
+
+gem 'date_validator'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
